Made changes to make sure the footer on the modal confirms to the standard out of the box functionality

--- a/force-app/main/default/staticresources/pmm/hideHelpIcons.css
+++ b/force-app/main/default/staticresources/pmm/hideHelpIcons.css
@@ -8,13 +8,3 @@
     display: inline;
     padding-left: 4px;
 }
-span[title="New Program Engagement"] {
-    font-size: 14px;
-    font-weight: bolder;
-    color: #00396b;
-    font-variant: small-caps;
-}
-span[title="New Program Engagement"]::before {
-    content: " + ";
-    font-size: 19px;
-}
